objects/QAobj9__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>QAobj9</label>
    <nameField>
        <label>QAobj9 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QAobj9s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>